Use virtual threads in ShopaholicController